--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,14 @@
 .App {
   text-align: center;
+
 }
+body{
+  background-image: url('../src/img/Clay.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+
 
 .App-logo {
   height: 40vmin;
